# elevator-tech-test

./: CMakeLists.txt  INSTRUCTION  README.md  dispatcher.cpp  dispatcher.h  elevator.cpp  elevator.h  elevatorcall.cpp  elevatorcall.h  simulator.cpp  simulator.h  test_elevator.cpp
